--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,15 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Os")
 endif()
 
-FILE(
+file(
   GLOB_RECURSE
   PROJECT_SOURCES
   src/*
   )
+
+set(PROJECT_LIBS "-lsfml-system -lsfml-window -lsfml-graphics")
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_executable("${PROJECT_NAME}" ${PROJECT_SOURCES})
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
+target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBS})
